# twilic-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  package.json
.github/workflows/: ci.yml  interop.yml  semgrep.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
include/twilic/: codec.hpp  dictionary.hpp  errors.hpp  interop_fixtures.hpp  model.hpp  protocol.hpp  protocol_helpers.hpp  session.hpp  twilic.hpp  v2.hpp  wire.hpp
scripts/: check-cpp-client-interop.sh  check-interop.sh  check-rust-client-interop.sh
src/: codec.cpp  dictionary.cpp  errors.cpp  interop_fixtures.cpp  model.cpp  protocol.cpp  protocol_helpers.cpp  session.cpp  v2.cpp  wire.cpp
test/: interop_fixtures_test.cpp  smoke_test.cpp
tools/: decode_rust_server_fixtures.cpp  emit_rust_client_fixtures.cpp
